wip: add js middleware

--- a/packages/demo/index.html
+++ b/packages/demo/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="root"></div>
     <div>Hello World</div>
+    <script type="module" src="/src/index.ts"></script>
     <!-- <script type="module" src="/src/main.tsx"></script> -->
   </body>
 </html>
