--- a/packages/demo/index.html
+++ b/packages/demo/index.html
@@ -10,6 +10,7 @@
     <div id="root"></div>
     <div>Hello World</div>
     <script type="module" src="/src/index.ts"></script>
+    <script type="module" src="/src/App.css"></script>
     <!-- <script type="module" src="/src/main.tsx"></script> -->
   </body>
 </html>
