--- a/packages/demo/index.html
+++ b/packages/demo/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="root"></div>
     <div>Hello World</div>
+    <img src="/public/vite.svg" alt="">
     <script type="module" src="/src/index.ts"></script>
     <script type="module" src="/src/App.css"></script>
     <!-- <script type="module" src="/src/main.tsx"></script> -->
