feat(optimizer): finish

--- a/packages/demo/index.html
+++ b/packages/demo/index.html
@@ -10,7 +10,7 @@
     <div id="root"></div>
     <div>Hello World</div>
     <img src="/public/vite.svg" alt="">
-    <script type="module" src="/src/index.ts"></script>
+    <script type="module" src="./src/main.tsx"></script>
     <!-- <script type="module" src="/src/main.tsx"></script> -->
   </body>
 </html>
